--- a/app/src/main/res/layout/command.xml
+++ b/app/src/main/res/layout/command.xml
@@ -1,63 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_height="wrap_content"
-	android:layout_width="wrap_content"
-	android:layout_margin="16dp">
+	android:layout_height="match_parent"
+	android:layout_width="match_parent">
 
-	<ScrollView
+	<RelativeLayout
 		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:id="@+id/outputScroll"
-		android:layout_alignParentBottom="true">
+		android:layout_width="match_parent"
+		android:id="@+id/testRelativeLayout1">
 
 		<TextView
 			android:layout_height="wrap_content"
-			android:layout_width="wrap_content"
-			android:id="@+id/output"/>
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:layout_width="match_parent"
+			android:text="Large Text"
+			android:id="@+id/cmdName"/>
 
-	</ScrollView>
+		<EditText
+			android:layout_height="wrap_content"
+			android:layout_width="match_parent"
+			android:ems="10"
+			android:layout_below="@id/cmdName"
+			android:id="@+id/input"/>
+
+		<GridLayout
+			android:layout_height="wrap_content"
+			android:layout_width="match_parent"
+			android:layout_below="@id/input"
+			android:id="@+id/params"
+			android:columnCount="4"/>
+
+		<Button
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:text="Execute!"
+			android:id="@+id/exec"
+			android:layout_below="@id/params"/>
+
+	</RelativeLayout>
 
 	<ScrollView
-		android:layout_height="match_parent"
-		android:layout_width="match_parent">
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:layout_below="@id/testRelativeLayout1"
+		android:layout_alignParentBottom="true">
 
-		<LinearLayout
-			android:layout_width="match_parent"
+		<HorizontalScrollView
 			android:layout_height="wrap_content"
-			android:orientation="vertical">
+			android:layout_width="wrap_content">
 
 			<TextView
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:layout_width="wrap_content"
-				android:id="@+id/cmdName"
-				android:layout_margin="16dp"/>
-
-			<EditText
-				android:layout_height="wrap_content"
-				android:inputType="textMultiLine"
+				android:layout_height="match_parent"
 				android:layout_width="match_parent"
-				android:layout_margin="16dp"
-				android:id="@+id/input"/>
+				android:id="@+id/output"
+				android:typeface="monospace"
+				android:selectable="true"/>
 
-			<GridLayout
-				columnCount="1"
-				android:layout_height="wrap_content"
-				android:layout_width="wrap_content"
-				rowCount="1"
-				android:id="@+id/params"
-				android:layout_margin="16dp"
-				android:rowCount="4"/>
-
-			<Button
-				android:layout_height="wrap_content"
-				android:layout_width="wrap_content"
-				android:text="Execute!"
-				android:layout_margin="16dp"
-				android:id="@+id/exec"/>
-
-		</LinearLayout>
+		</HorizontalScrollView>
 
 	</ScrollView>
 
