--- a/app/src/main/res/layout/command.xml
+++ b/app/src/main/res/layout/command.xml
@@ -24,7 +24,7 @@
 			android:id="@+id/input"/>
 
 		<ScrollView
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="200dp"
 			android:layout_below="@id/input"
 			android:id="@+id/paramsScrollView">
